# IAM

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Cargo.toml  DATABASE_SCHEMA.md  README.md  SETUP_GUIDE.md  TECHNICAL_DESIGN.md  docker-compose.yml  dockerfile  test.http
migrations/: 20260628183728_create_users.sql  20260628183945_create_organizations.sql  20260628184003_create_memberships.sql  20260628184018_create_roles.sql  20260628184033_create_permissions.sql  20260628184047_create_role_permissions.sql  20260628184114_create_member_roles.sql  20260628184131_create_sql_sessions.sql  20260628184147_create_api_keys.sql  20260628184211_create_audit_logs.sql  20260628184249_create_audit_indexes.sql.sql  20260702141040_add_created_by_to_api_keys.sql
src/: app.rs  main.rs  state.rs
src/auth/: api_key.rs  extractor.rs  jwt.rs  mod.rs  password.rs
src/config/: settings.rs
src/db/: migrate.rs  mod.rs  pool.rs
src/dto/: api_key.rs  auth.rs  member.rs  mod.rs  organization.rs  permission.rs  role.rs  session.rs  user.rs
src/errors/: app_error.rs
src/handlers/: api_key.rs  auth.rs  member.rs  member_role.rs  mod.rs  organization.rs  role.rs  role_permission.rs  session.rs  test.rs  user.rs
src/middleware/: api_key.rs  auth.rs
src/routes/: api_key.rs  auth.rs  member.rs  member_role.rs  mod.rs  organization.rs  role.rs  role_permission.rs  session.rs  test.rs  user.rs
src/services/: api_key.rs  api_key_auth.rs  audit.rs  auth.rs  member.rs  member_role.rs  mod.rs  organization.rs  role.rs  role_permission.rs  session.rs  user.rs
(+17 files in other folders)
