[package]
name = "iam"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "macros"
] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15"
anyhow = "1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = "0.3"

argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

validator = { version = "0.20", features = ["derive"] }
rand = "0.9"
base64 = "0.22"

tower = "0.5"
http-body-util = "0.1"